Try fix travis path

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
 
 before_script:
   # Composer install
-  cd site
-  composer install --prefer-dist --dev
+  cd site;
+  composer install --prefer-dist --dev;
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test;'; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test2;'; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test3;'; fi"
