--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,20 @@ env:
 
 before_script:
   # Composer install
-  cd site;
-  composer install --prefer-dist --dev;
+  - cd site
+  - composer install --prefer-dist --dev
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test;'; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test2;'; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test3;'; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE cakephp_test;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE SCHEMA test2;' -U postgres -d cakephp_test; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE SCHEMA test3;' -U postgres -d cakephp_test; fi"
-  - chmod -R 777 ./app/tmp
+  - chmod -R 777 ./tmp
   - echo "var net = require('net');
     var server = net.createServer();
     server.listen(80, 'localhost');
-    console.log('TCP server listening on port 80 at localhost.');" > app/tmp/socket.js
-  - sudo node ./app/tmp/socket.js &
+    console.log('TCP server listening on port 80 at localhost.');" > tmp/socket.js
+  - sudo node ./tmp/socket.js &
   - set +H
   - echo "<?php
     class DATABASE_CONFIG {
