--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ before_script:
     }" > Config/database.php
 
 script:
-  - ./lib/Cake/Console/cake test core AllTests --stderr
+  - ./Console/cake test core AllTests --stderr
 
 notifications:
   email: false
