Fix some includes, gen schema, got rid of PHPUnit from composer

--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,8 @@ before_script:
     }" > Config/database.php
 
 script:
-  - ./Vendor/bin/cake test core AllTests --stderr
+  - ./Console/cake schema create
+  - ./Console/cake test core AllTests --stderr
 
 notifications:
   email: false
