--- a/site/composer.json
+++ b/site/composer.json
@@ -4,15 +4,18 @@
         {
             "type": "pear",
             "url": "http://pear.cakephp.org"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/CakeDC/utils.git"
         }
     ],
     "require": {
         "pear-cakephp/cakephp": ">=2.3.4",
-        "cakephp/debug_kit": "2.2.*",
-        "cakedc/search": "dev-develop"
+        "CakeDC/utils": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "cakephp/debug_kit": "2.2.*"
     },
     "config": {
         "vendor-dir": "Vendor/"
