Added basic gearman support and start of LastFM worker for album art

--- a/site/composer.json
+++ b/site/composer.json
@@ -12,12 +12,17 @@
         {
             "type": "git",
             "url": "https://github.com/josegonzalez/upload.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/lorenzo/cakephp-gearman.git"
         }
     ],
     "require": {
         "pear-cakephp/cakephp": ">=2.3.4",
         "CakeDC/utils": "dev-master",
-        "josegonzalez/upload": "dev-master"
+        "josegonzalez/upload": "dev-master",
+        "lorenzo/cakephp-gearman": "dev-master"
     },
     "require-dev": {
         "cakephp/debug_kit": "2.2.*"
